logging demo completed

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>auditing.demo</module>
         <module>exception.demo</module>
         <module>mapstruct.demo</module>
+        <module>logging.demo</module>
+        <module>basic</module>
     </modules>
    
 </project>
