liquibase demo completed

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>exception.demo</module>
         <module>mapstruct.demo</module>
         <module>logging.demo</module>
+        <module>liquibase.demo</module>
         <module>basic</module>
     </modules>
    
